--- a/EGMII.P.I.D/lib/nblibraries.properties
+++ b/EGMII.P.I.D/lib/nblibraries.properties
@@ -6,6 +6,13 @@ libs.groovy-all.classpath=\
     ${base}/groovy-all/groovy-all.jar
 libs.groovy-all.displayName=Groovy 2.1.7
 libs.groovy-all.prop-maven-dependencies=org.codehaus.groovy:groovy-all:2.1.7:jar
+libs.javaee-endorsed-api-6.0.classpath=\
+    ${base}/javaee-endorsed-api-6.0/javax.annotation.jar:\
+    ${base}/javaee-endorsed-api-6.0/jaxb-api-osgi.jar:\
+    ${base}/javaee-endorsed-api-6.0/webservices-api-osgi.jar
+libs.javaee-endorsed-api-6.0.displayName=Java EE 6 Endorsed API Library
+libs.javaee-endorsed-api-6.0.javadoc=\
+    ${base}/javaee-endorsed-api-6.0/javaee-doc-api.jar
 libs.jstl.classpath=\
     ${base}/jstl/jstl-impl.jar:\
     ${base}/jstl/jstl-api.jar
