--- a/EGMII.P.I.D/web/WEB-INF/web.xml
+++ b/EGMII.P.I.D/web/WEB-INF/web.xml
@@ -216,6 +216,10 @@
         <servlet-name>ViewAllInventoryServlet</servlet-name>
         <servlet-class>Controller_View.ViewAllInventoryServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>PrintAccessoriesInventory</servlet-name>
+        <servlet-class>Controller_Print.PrintAccessoriesInventory</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>SearchProductServlet</servlet-name>
         <url-pattern>/SearchProductServlet</url-pattern>
@@ -431,6 +435,10 @@
     <servlet-mapping>
         <servlet-name>ViewAllInventoryServlet</servlet-name>
         <url-pattern>/ViewAllInventoryServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PrintAccessoriesInventory</servlet-name>
+        <url-pattern>/PrintAccessoriesInventory</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
