--- a/EGMII.P.I.D/nbproject/project.properties
+++ b/EGMII.P.I.D/nbproject/project.properties
@@ -102,7 +102,8 @@ javac.classpath=\
     ${file.reference.junit-4.10.jar}:\
     ${file.reference.mysql-connector-java-5.1.36-bin.jar}:\
     ${file.reference.nekohtml-0.9.5.jar}:\
-    ${file.reference.xercesImpl-2.6.1.jar}
+    ${file.reference.xercesImpl-2.6.1.jar}:\
+    ${libs.javaee-endorsed-api-6.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
