--- a/EGMII.P.I.D/nbproject/project.properties
+++ b/EGMII.P.I.D/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.commons-beanutils-1.9.2.jar=lib\\commons-beanutils-1.9.2.jar
 file.reference.commons-collections-3.2.jar=lib\\commons-collections-3.2.jar
 file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
 file.reference.commons-logging-1.2.jar=lib\\commons-logging-1.2.jar
+file.reference.groovy-all.jar=lib/groovy-all.jar
 file.reference.gson-2.3.1.jar=lib\\gson-2.3.1.jar
 file.reference.httpunit.jar=lib\\httpunit.jar
 file.reference.itext-2.1.7.jar=lib\\itext-2.1.7.jar
@@ -77,8 +78,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.36-bin.jar}:\
     ${file.reference.nekohtml-0.9.5.jar}:\
     ${file.reference.xercesImpl-2.6.1.jar}:\
-    ${libs.groovy-all.classpath}:\
     ${file.reference.commons-beanutils-1.9.2.jar}:\
+    ${file.reference.groovy-all.jar}:\
     ${file.reference.commons-collections-3.2.jar}:\
     ${file.reference.commons-digester-2.1.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
