--- a/EGMII.P.I.D/nbproject/project.properties
+++ b/EGMII.P.I.D/nbproject/project.properties
@@ -4,6 +4,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -33,7 +34,6 @@ file.reference.commons-beanutils-1.9.2.jar=lib\\commons-beanutils-1.9.2.jar
 file.reference.commons-collections-3.2.jar=lib\\commons-collections-3.2.jar
 file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
 file.reference.commons-logging-1.2.jar=lib\\commons-logging-1.2.jar
-file.reference.groovy-all.jar=lib/groovy-all.jar
 file.reference.gson-2.3.1.jar=lib\\gson-2.3.1.jar
 file.reference.httpunit.jar=lib\\httpunit.jar
 file.reference.itext-2.1.7.jar=lib\\itext-2.1.7.jar
@@ -79,7 +79,6 @@ javac.classpath=\
     ${file.reference.nekohtml-0.9.5.jar}:\
     ${file.reference.xercesImpl-2.6.1.jar}:\
     ${file.reference.commons-beanutils-1.9.2.jar}:\
-    ${file.reference.groovy-all.jar}:\
     ${file.reference.commons-collections-3.2.jar}:\
     ${file.reference.commons-digester-2.1.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
@@ -97,7 +96,8 @@ javac.classpath=\
     ${file.reference.junit-4.10.jar}:\
     ${file.reference.mysql-connector-java-5.1.36-bin.jar}:\
     ${file.reference.nekohtml-0.9.5.jar}:\
-    ${file.reference.xercesImpl-2.6.1.jar}
+    ${file.reference.xercesImpl-2.6.1.jar}:\
+    ${libs.groovy-all.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
